--- a/Melon.vcxproj
+++ b/Melon.vcxproj
@@ -150,13 +150,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\Misc\glad\src\glad.c" />
+    <ClCompile Include="Helpers.cpp" />
+    <ClCompile Include="Math.cpp" />
     <ClCompile Include="Rendering.cpp" />
+    <ClCompile Include="Rendering2.cpp" />
     <ClCompile Include="ResourceLoader.cpp" />
     <ClCompile Include="stb_image.cpp" />
+    <ClCompile Include="System.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="Windowing.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="DynamicArray.inl" />
     <None Include="Shader.frag" />
     <None Include="Shader.vert" />
   </ItemGroup>
