--- a/Melon.vcxproj.filters
+++ b/Melon.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="ROLib.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="ShaderLib.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Texture.frag" />
