--- a/Melon.vcxproj.filters
+++ b/Melon.vcxproj.filters
@@ -57,6 +57,12 @@
     <ClCompile Include="ShaderLib.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Audio.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="AudioLoading.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="melon.png">
@@ -70,5 +76,13 @@
     <ClInclude Include="Melon.hpp">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="me.wav">
+      <Filter>Файлы ресурсов</Filter>
+    </Media>
+    <Media Include="better-call-saul.wav">
+      <Filter>Файлы ресурсов</Filter>
+    </Media>
   </ItemGroup>
 </Project>
