--- a/Melon.vcxproj
+++ b/Melon.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="Windowing.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="box.jpg" />
     <Image Include="grass.jpeg" />
     <Image Include="melon.png" />
   </ItemGroup>
