Something something lorem ipsum

--- a/Melon.vcxproj.filters
+++ b/Melon.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="Misc.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Melon.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="melon.png">
