--- a/Melon.vcxproj
+++ b/Melon.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="..\..\..\Misc\glad\src\glad.c" />
     <ClCompile Include="Audio.cpp" />
     <ClCompile Include="AudioLoading.cpp" />
+    <ClCompile Include="Melon.cpp" />
     <ClCompile Include="MeshLib.cpp" />
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="Misc.cpp" />
